--- a/client/src/components/CardComponent/CarComp.css
+++ b/client/src/components/CardComponent/CarComp.css
@@ -8,7 +8,7 @@ p {
     margin-top: 20px;
 }
 
-.item-car.card,
+.item-car .card,
 .item-promo.card,
 .item-place.card,
 .item-airport.card,
@@ -17,6 +17,10 @@ p {
 .item-ins.card {
     text-decoration: none;
     border-radius: 12px;
+}
+
+.item-car .card {
+    padding: 0.6rem;
 }
 
 .item-box {
