--- a/client/src/components/ProductDetailsComponent/ProductDetails.css
+++ b/client/src/components/ProductDetailsComponent/ProductDetails.css
@@ -156,6 +156,14 @@
     background: #fff;
 }
 
+.input-group {
+    width: 406px !important;
+}
+
+.input-group-text{
+    height: 100%;
+}
+
 .surcharge p.title {
     font-weight: 700;
     margin-bottom: 16px;
