--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,9 @@
 
-.btn {
+/* .btn {
     width: 50%;
     padding: 16px 0 !important;
     border-radius: 8px !important;
-}
+} */
 /* Content banner */
 
 
